Fixed spacing issues on CreatePage

--- a/src/App.css
+++ b/src/App.css
@@ -241,13 +241,18 @@ button:hover {
 }
 
 .create-view h3 {
-  display: block;
+  height: 5%;
+  display: flex;
+  flex-flow: row nowrap;
+  height: 5%;
   width: 100%;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
   background-color: #7B8CDE;
   color: white;
-  padding: 15px;
+  /* padding: 15px; */
   margin: 0;
+  box-sizing: border-box;
 }
 
 .name-hunt-view {
@@ -277,7 +282,7 @@ button:hover {
 }
 
 .add-post-view {
-  height: 90%;
+  height: 100%;
   width: 100%;
 }
 
